<resources>
    <string name="app_name">Eyecare</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dosage">Dosage</string>
    <string name="medication">Medication</string>
    <string name="view">View</string>
    <string name="report">Report</string>
    <string name="your_medication">Your Medication</string>
    <string name="add">Add</string>
    <string name="done">Done</string>
    <string name="delete_all">Delete All</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="update">Update</string>
    <string name="eyeGuardianPageTxtView">Eye Guardian Emergency Service</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="GCD_headingTxt">Let\'s get started</string>
    <string name="getEmergNameEdtHint">Enter your name (e.g. - Jhon Doe)</string>
    <string name="GCD_headingTxt2">Now, let\'s add emergency mobile numbers.</string>
    <string name="GCD_headingTxt3">Add your customized message</string>
    <string name="edtTxtContNoHint1"> Enter first contact number </string>
    <string name="edtTxtContNoHint2"> Enter second contact number </string>
    <string name="edtTxtContNoHint3"> Enter third contact number </string>
    <string name="navNxtBtnTxt">Next</string>
    <string name="addNewEmergDetailBtnTxt">Add New Details</string>
    <string name="today_schedule">Today Schedule</string>
    <string name="mark">Mark</string>

    <string name="next">Next</string>
    <string name="txtMyNameText">My Name</string>
    <string name="txtMyContactNoText">Emergency Contact Numbers</string>
    <string name="txtMyMsgText">Emergency Message</string>
    <string name="dltEmergDetailBtnTxt">Delete details</string>
    <string name="btnEmrgUpd">Update details</string>
    <string name="btnUpdEmrgDetailsTxt">Save</string>

    <string name="custom_action_emrg_intent">custom.actions.intent.EMRG_INTENT</string>
    <string name="activatedHeadTxtLeft">Code</string>
    <string name="activatedHeadTxtRight">RED</string>
    <string name="activatedEmrgSubHead">Emergency Service Has Been Activated!!</string>
    <string name="select_medication">Select Medication</string>
    <string name="frequency">Intake Frequency</string>
    <string name="adherence_summary">Adherence Summary</string>
    <string name="taken_on_time">Taken on Time</string>
    <string name="missed_doses">Missed Doses</string>
    <string-array name="emrgQueries">
        <item>Open emergency service in ikea app</item>
        <item>I Lost vision</item>
        <item>help I lost vision</item>

    </string-array>
</resources>