<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.UpdateMedicationActivity"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/backBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_arrow_back"
        android:clickable="true"
        android:layout_marginStart="5dp"
        android:padding="20dp"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="scrollview">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:gravity="center_vertical"
                android:paddingHorizontal="20dp">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/addMedBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_voice"
                    app:backgroundTint="@color/black"
                    app:maxImageSize="25dp"
                    app:elevation="0dp"
                    android:layout_gravity="top"
                    app:tint="@color/white" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/etMedicationLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="10dp"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etMedication"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/medication" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:gravity="center_vertical"
                android:paddingHorizontal="20dp">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/addDoseBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_voice"
                    app:backgroundTint="@color/black"
                    app:maxImageSize="25dp"
                    app:elevation="0dp"
                    android:layout_gravity="top"
                    app:tint="@color/white" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/etDoseLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="10dp"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etDose"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/dosage" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <TimePicker
                android:id="@+id/timeP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:timePickerMode="spinner" />

            <Button
                android:id="@+id/setBtn"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="40dp"
                android:text="@string/update"
                app:cornerRadius="50dp"
                app:icon="@drawable/ic_edit"
                app:strokeColor="@color/black" />
        </LinearLayout>


    </ScrollView>

</LinearLayout>