<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ActivateEmergencyContactActivity">

  <ImageView
      android:id="@+id/imageView"
      android:layout_width="100dp"
      android:layout_height="50dp"
      android:layout_marginTop="12dp"
      android:src="@drawable/logo"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <TextView
      android:id="@+id/activatedHeadTxt"
      android:layout_width="204dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="64dp"
      android:backgroundTint="@color/black"
      android:gravity="center_horizontal"
      android:text="@string/activatedHeadTxtLeft"
      android:textAlignment="viewEnd"
      android:textSize="44sp"
      android:textStyle="bold"
      app:layout_constraintEnd_toStartOf="@+id/activatedHeadTxt2"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintHorizontal_chainStyle="packed"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <TextView
      android:id="@+id/activatedHeadTxt2"
      android:layout_width="204dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="64dp"
      android:backgroundTint="@color/Red"
      android:gravity="center_horizontal"
      android:text="@string/activatedHeadTxtRight"
      android:textAlignment="viewStart"
      android:textColor="@color/Red"
      android:textSize="44sp"
      android:textStyle="bold"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toEndOf="@+id/activatedHeadTxt"
      app:layout_constraintTop_toTopOf="parent" />

  <TextView
      android:id="@+id/activatedEmrgSubHead"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="64dp"
      android:layout_marginTop="24dp"
      android:layout_marginEnd="64dp"
      android:gravity="center"
      android:text="@string/activatedEmrgSubHead"
      android:textAlignment="center"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/activatedHeadTxt" />

  <TextView
      android:id="@+id/textView2"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="64dp"
      android:layout_marginTop="24dp"
      android:text="Activated Date : "
      android:textColor="@color/black"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView10" />

  <TextView
      android:id="@+id/textView10"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="64dp"
      android:layout_marginTop="50dp"
      android:text="Patient name :"
      android:textColor="@color/black"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/activatedEmrgSubHead" />

  <TextView
      android:id="@+id/activatedDateTxt"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="180dp"
      android:layout_marginTop="24dp"
      android:text="textView"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/activatedNameTxt" />

  <TextView
      android:id="@+id/activatedNameTxt"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="180dp"
      android:layout_marginTop="50dp"
      android:text="textView"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/activatedEmrgSubHead" />

  <TextView
      android:id="@+id/activatedTimeTxt"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="180dp"
      android:layout_marginTop="24dp"
      android:text="textView"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/activatedDateTxt" />

  <TextView
      android:id="@+id/activatedLocationTxt"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="64dp"
      android:layout_marginTop="16dp"
      android:layout_marginEnd="64dp"
      android:gravity="center"
      android:text="Location details are not available"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView4" />

  <TextView
      android:id="@+id/textView3"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="64dp"
      android:layout_marginTop="24dp"
      android:text="Activated Time : "
      android:textColor="@color/black"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView2" />

  <TextView
      android:id="@+id/textView4"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="64dp"
      android:layout_marginTop="24dp"
      android:text="Activated Location: -"
      android:textColor="@color/black"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView3" />

  <TextView
      android:id="@+id/textView5"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="32dp"
      android:layout_marginTop="24dp"
      android:layout_marginEnd="32dp"
      android:gravity="center_horizontal"
      android:text="The following numbers have been notified about the emergency."
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/activatedLocationTxt" />

  <TextView
      android:id="@+id/activatedNumber1"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="24dp"
      android:text="TextView"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView5" />

  <TextView
      android:id="@+id/activatedNumber2"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="24dp"
      android:text="TextView"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.498"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/activatedNumber1" />

  <TextView
      android:id="@+id/activatedNumber3"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="24dp"
      android:text="TextView"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.498"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/activatedNumber2" />

  <TextView
      android:id="@+id/textView9"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="32dp"
      android:layout_marginTop="32dp"
      android:layout_marginEnd="32dp"
      android:gravity="center_horizontal"
      android:text="Note :- Please contact emergency health services as soon as possible to ensure patient safety!"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/activatedNumber3" />

</androidx.constraintlayout.widget.ConstraintLayout>